# FFMPEGNdkLib

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/kyen/lhm/ffmpegndklib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/kyen/lhm/ffmpegndklib/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/kyen/lhm/ffmpegndklib/: ExampleUnitTest.java
ffmpeglib/: build.gradle
ffmpeglib/src/androidTest/java/kyen/lhm/ffmpeglib/: ExampleInstrumentedTest.java
ffmpeglib/src/main/: AndroidManifest.xml
ffmpeglib/src/main/java/kyen/lhm/ffmpeglib/: FFMPEGLib.java
ffmpeglib/src/main/jni/: CMakeLists.txt  Log.h  ffmpeglib.cpp  kyen_lhm_ffmpeglib_FFMPEGLib.h
ffmpeglib/src/main/jni/distribution/lib/arm64-v8a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ffmpeglib/src/main/jni/distribution/lib/armeabi-v7a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ffmpeglib/src/main/jni/distribution/lib/armeabi/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ffmpeglib/src/main/jni/distribution/lib/x86/pkgconfig/: libavcodec.pc  libavutil.pc  libpostproc.pc  libswresample.pc
ffmpeglib/src/main/jni/distribution/lib/x86_64/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ffmpeglib/src/main/jni/distribution/lib/x86_enable_asm/pkgconfig/: libavdevice.pc  libavfilter.pc  libavformat.pc  libswscale.pc
ffmpeglib/src/test/java/kyen/lhm/ffmpeglib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
